# ml-learn-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
alg/: Cargo.toml
alg/examples/: activation_fn.rs
alg/src/: lib.rs
alg/src/bayes/: mod.rs
alg/src/dataset/: mnist.rs
alg/src/decision_tree/: mod.rs
alg/src/dicision_tree/: mod.rs
alg/src/knn/: mod.rs
alg/src/layer/: add.rs  affine.rs  matmul.rs  mod.rs  mul.rs  relu.rs  sigmoid.rs  softmax_loss.rs
alg/src/logistic/: mod.rs
alg/src/math/: autodiff.rs  loss.rs  mod.rs  normalize.rs  one_hot.rs  stat.rs
alg/src/neural_network/: mod.rs  perceptron.rs
alg/src/nlp/: counter.rs  infer.rs  mod.rs
alg/src/nn/: mod.rs
alg/src/nn/dataset/: mnist.rs
alg/src/nn/layer/: batch_norm.rs  batch_norm_v1.rs  convolution.rs  dropout.rs  linear.rs  mod.rs  relu.rs  sigmoid.rs  softmax_loss.rs
alg/src/nn/model/: layer.rs  mod.rs  simple.rs  two_layer.rs
alg/src/nn/optimizer/: mod.rs
alg/src/nn/train/: mod.rs
alg/src/optimizer/: mod.rs
alg/src/tensor/: mod.rs  safetensors.rs
alg/src/train/: mod.rs
alg/src/util/: mod.rs
examples/: classify_person.rs  knn_plot.rs
examples/classify_naive_bayes/: Cargo.toml
examples/classify_naive_bayes/src/: main.rs
examples/classify_person/: Cargo.toml
examples/classify_person/src/: main.rs
examples/decision_tree_plot/: Cargo.toml
examples/decision_tree_plot/src/: main.rs
examples/knn_plot/: Cargo.toml
examples/knn_plot/src/: main.rs
examples/logistic_regression/: Cargo.toml
examples/logistic_regression/src/: main.rs
examples/mnist_training/: Cargo.toml
examples/mnist_training/src/: main.rs
examples/neural_network/: Cargo.toml
examples/neural_network/src/: main.rs
examples/nlp_learn/: Cargo.toml
examples/nlp_learn/src/: main.rs
src/: lib.rs  main.rs  tools.rs
src/knn/: mod.rs
tools/: Cargo.toml
tools/src/: lib.rs
