[workspace]
resolver = "2"
members = ["alg", "tools", "examples/*"]

[workspace.dependencies]
alg = { path = "alg" }
tools = { path = "tools" }
ndarray = { version = "*", features = ["blas"] }
openblas-src = { version = "0.10", features = ["cblas", "system"] }
ndarray-linalg = { version = "*", features = ["openblas-system"] }
egui = { version = "0.32.0" }
eframe = { version = "0.32.0" }
egui_extras = { version = "0.32.0", features = ["all_loaders", "svg_text"] }
egui_plot = { version = "0.33.0" }
md-5 = "*"
hex = "*"
layout-rs = "*"
anyhow = "*"
tracing = "*"
tracing-subscriber = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
regex = "*"
rand = "*"
rand_distr = "*"
num = "*"
approx = "*"
byteorder = "*"
image = "*"
safetensors = "*"
memmap2 = "*"
# burn-tensor = { version = "*", features = ["cubecl-wgpu"] }

# [profile.dev.package."*"]
# opt-level = 3
