[workspace]
resolver = "2"
members = ["alg", "tools", "examples/*"]

[workspace.dependencies]
alg = { path = "alg" }
tools = { path = "tools" }
ndarray = { version = "*", features = ["blas"] }
blas-src = { version = "*", features = ["accelerate"] }
ndarray-linalg = { version = "*" }
egui = { version = "0.32.1" }
eframe = { version = "0.32.1" }
egui_extras = { version = "0.32.1", features = ["all_loaders", "svg_text"] }
egui_plot = { version = "0.33.0" }
md-5 = "*"
hex = "*"
layout-rs = "*"
anyhow = "*"
tracing = "*"
tracing-subscriber = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
regex = "*"
rand = { version = "*", features = ["alloc"] }
rand_distr = "*"
num = "*"
approx = "*"
byteorder = "*"
image = "*"
safetensors = "*"
memmap2 = "*"
mimalloc = "*"
# burn-tensor = { version = "*", features = ["cubecl-wgpu"] }

[profile.release]
codegen-units = 1
lto = "fat"


[profile.dev.package."*"]
opt-level = 3
