[workspace]
resolver = "2"
members = ["alg", "tools", "examples/*"]

[workspace.dependencies]
alg = { path = "alg" }
tools = { path = "tools" }
ndarray = { version = "*", features = [
    "blas",
    "rayon",
    "matrixmultiply-threading",
] }
blas-src = { version = "*", features = ["openblas"] }
ndarray-linalg = { version = "*" }
egui = { version = "*" }
eframe = { version = "*" }
egui_extras = { version = "*", features = ["all_loaders", "svg_text"] }
egui_plot = { version = "*" }
md-5 = "*"
hex = "*"
layout-rs = "*"
anyhow = "*"
tracing = "*"
tracing-subscriber = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
regex = "*"
rand = { version = "*", features = ["alloc"] }
rand_distr = "*"
num = "*"
approx = "*"
byteorder = "*"
image = "*"
safetensors = "*"
memmap2 = "*"
mimalloc = "*"

burn-cubecl = "*"
burn-fusion = "*"
burn-tensor = { version = "*", default-features = false }
cubecl = { version = "*", default-features = false }
burn-ndarray = { version = "*" }
# burn-tensor = { version = "*", features = ["cubecl-wgpu"] }
#

# [profile.release]
# codegen-units = 1
# lto = "fat"


[profile.dev.package."*"]
opt-level = 3
