[package]
name = "alg"
version = "0.1.0"
edition = "2024"

[dependencies]
ndarray = { workspace = true }
ndarray-linalg = { workspace = true }

tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

approx = { workspace = true }
byteorder = { workspace = true }
anyhow = { workspace = true }
safetensors = { workspace = true }
num = { workspace = true }
vectra = { workspace = true }

[dev-dependencies]
tracing-subscriber = "0.3.19"
tools = { workspace = true }
