[package]
name = "dicision_tree_plot"
version = "0.1.0"
edition = "2024"

[dependencies]
tools = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
egui_extras = { workspace = true }
egui-snarl = "0.6"
layout-rs = "*"
anyhow = "*"
md-5 = { workspace = true }
hex = { workspace = true }
