[package]
name = "dicision_tree_plot"
version = "0.1.0"
edition = "2024"

[dependencies]
alg = { workspace = true }
tools = { workspace = true }
egui = { workspace = true }
eframe = { workspace = true }
egui_extras = { workspace = true }
anyhow = { workspace = true }
ndarray = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
