[package]
name = "knn_plot"
version = "0.1.0"
edition = "2024"

[dependencies]
alg = { workspace = true }
tools = { workspace = true }
ndarray = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_plot = { workspace = true }
bevy = "*"
bevy_egui = "*"
tracing = "*"
tracing-subscriber = "*"
