[package]
name = "mnist_training"
version = "0.1.0"
edition = "2024"

[dependencies]
alg = { workspace = true }
ndarray = { workspace = true }
openblas-src = { workspace = true }
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true }
image = { workspace = true }
safetensors = { workspace = true }
memmap2 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
